2014-02-12  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'pipe-process'.

2014-02-06  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'current-path'.

2014-01-02  Per Bothner  <per@bothner.com>

	* repl.java: Update year to 2014.

	* standard/Scheme.java (initScheme): Remove 'simple-guard',
	since re-implemented 'guard' is (almost) equally simple.

2013-12-22  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Add 'run-process',
	'process-exit-wait', 'process-exit-ok?', '&cmd', '&`', '&sh'.

2013-12-21  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): New procedures 'path-bytes'
	and 'path-data'.  New named quasi-literals 'PD' and '<'.

2013-12-20  Per Bothner  <per@bothner.com>

	* lang/TemplateScope.java: Make writeExternal/readExternal work
	for a TemplateScope from a ModuleLevel macro - the important case
	for compiling macro-generating macros.

	* lang/SyntaxTemplate.java (convert_template):  Check for cycle
	before (rather than after) dereferencing SyntaxForms. This fixes
	Savannah bug #40869 "self-referential (cyclic) syntax template".

	* lang/SyntaxTemplate.java (seen): Unconditionally
	assume availability of java.util.IdentityHashMap.

2013-12-15  John Tobey <jtobey@john-edwin-tobey.org>

	* lang/SyntaxForms.java (class PairWithPositionSyntaxForm):
	Make public.

2013-12-13  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme):  Add definitions for r6rs/r7rs
	exception handling.

2013-12-09  Per Bothner  <per@bothner.com>

	* lang/SyntaxForms.java (class PairWithPositionSyntaxForm):
	Implement Externalizable.

2013-12-08  Per Bothner  <per@bothner.com>

	* lang/SyntaxForms.java (class SimpleSyntaxForm):
	Implement Externalizable.
	(class PairSyntaxForm): Likewise.
	This helps fix Svannah bug #40822 "Exporting macro-defined macro:
	Internal error".

2013-12-05  Per Bothner  <per@bothner.com>
